// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Button/Button.tools.svelte: Default 1`] = `
<span>
  <button
    class="svelte-sadb63"
  >
     
    <span
      class="svelte-sadb63"
    >
      Default
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large icon 1`] = `
<span>
  <button
    class="iconOnly large svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      play_arrow
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large text and icon 1`] = `
<span>
  <button
    class="large svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      person
    </i>
     
    <span
      class="svelte-sadb63"
    >
      Hey!
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary 1`] = `
<span>
  <button
    class="primary svelte-sadb63"
  >
     
    <span
      class="svelte-sadb63"
    >
      Primary
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary icon 1`] = `
<span>
  <button
    class="primary iconOnly svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      volume_up
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary with badge 1`] = `
<span>
  <button
    class="primary svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      face
    </i>
     
    <span
      class="svelte-sadb63"
    >
      Hello
    </span>
     
     
    <div
      class="badge svelte-sadb63 halo"
    >
      5
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Text and icon 1`] = `
<span>
  <button
    class="svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      face
    </i>
     
    <span
      class="svelte-sadb63"
    >
      Hello
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge 1`] = `
<span>
  <button
    class="svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      face
    </i>
     
    <span
      class="svelte-sadb63"
    >
      Hello
    </span>
     
     
    <div
      class="badge svelte-sadb63 halo"
    >
      23
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge limit 1`] = `
<span>
  <button
    class="svelte-sadb63"
  >
    <i
      class="material-icons svelte-sadb63"
    >
      warning
    </i>
     
    <span
      class="svelte-sadb63"
    >
      Just too much
    </span>
     
     
    <div
      class="badge svelte-sadb63 halo"
    >
      999+
    </div>
  </button>
</span>
`;
